--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,18 +28,23 @@
     "@nestjs/throttler": "^6.2.1",
     "@prisma/client": "^6.1.0",
     "@repo/shared-types": "workspace:*",
+    "@types/multer": "^1.4.12",
+    "@types/xml2js": "^0.4.14",
     "argon2": "^0.44.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "csrf-csrf": "^3.0.0",
+    "csv-parse": "^6.1.0",
     "helmet": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.1.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
